feat(NOM-8): handle optional password fields in user update flow